--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html"><i class="fa-regular fa-basket-shopping-simple"></i></a></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
-
-
-
-
-
             </ul>
+        </div>
+        <div id="mobile">
+            <i id="bar" class="fas fa-outdent"></i>
+
         </div>
     </section>
     <section id ="hero">
