--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
             <ul id="navbar">
                 <li><a class = "active" href="index.html">Home</a></li>
-                <li><a href="shop.html">shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="signin.html">Sign in</a></li>
                 <li><a href="login.html">Login</a></li>
                 
@@ -45,7 +45,7 @@
         <h2>Featured Projects</h2>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='sproduct.html';">
                 <img src="img/clothestest.jpg" alt="" width="">
                 <div class="des">
                     <span>adidas</span>
