--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul id="navbar">
                 <li><a class = "active" href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="signin.html">Sign in</a></li>
+                <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
                 
                 <li><img id="bar" src="img/shopping-cart.png"  width="20"></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
