--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
                 <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
                 
-                <li><img id="bar" src="img/shopping-cart.png"  width="20"></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
+                <li><a href="cart.html"><img id="bar" src="img/shopping-cart.png"  width="20"></a></li>
                 <img id="close" href="#" src="img/close.png"  width="10">
             </ul>
         </div>
@@ -325,8 +325,6 @@
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-pinterest-p"></i>
-                    
-
                 </div>
 
             </div>
