--- a/sproduct.html
+++ b/sproduct.html
@@ -16,7 +16,7 @@
         <a href="#"><img src="img/piconetest.png" class="logo" alt=""></a><!--Logo website-->
         <div>
             <ul id="navbar">
-                <li><a class = "active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="shop.html">shop</a></li>
                 <li><a href="signin.html">Sign in</a></li>
                 <li><a href="login.html">Login</a></li>
