--- a/cart.html
+++ b/cart.html
@@ -19,15 +19,14 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
-                <a><a class="active" ><img id="cartbar"  src="img/shopping-cart.png"  width="20"></a></li>
+                <li><a><a class="active" ><img id="cartbar"  src="img/shopping-cart.png"  width="20"></a></li>
                 <img id="close" href="#" src="img/close.png"  width="10">
             </ul>
         </div>
         <div id="mobile">
             <img id="bar" src="img/outdent.png"  width="20">
-
         </div>
-        
+
     </section>
     <section id="cart" class="section-p1">
         <table width="100%">
@@ -90,7 +89,7 @@
                 </tr>
                 <tr>
                     <td><strong>Totals</strong></td>
-                    <td><strong>200 Bath</strong></td>
+                    <td><strong>600 Bath</strong></td>
                 </tr>
             </table>
             <button class="normal">Proceed to Checkout</button>
