--- a/sproduct.html
+++ b/sproduct.html
@@ -20,8 +20,7 @@
                 <li><a class="active" href="shop.html">shop</a></li>
                 <li><a href="signin.html">Sign in</a></li>
                 <li><a href="login.html">Login</a></li>
-                
-                <li><img id="bar" src="img/shopping-cart.png"  width="20"></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
+                <li><a href="cart.html"><img id="bar"  src="img/shopping-cart.png"  width="20"></a></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
                 <img id="close" href="#" src="img/close.png"  width="10">
             </ul>
         </div>
@@ -81,7 +80,7 @@
         <h2>Featured Products</h2>
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='shop.html';">
                 <img src="img/clothestest.jpg" alt="" width="">
                 <div class="des">
                     <span>adidas</span>
@@ -98,7 +97,7 @@
                 <a href="#"><img  src="img/shopping-cart.png" class="cart" width="1"></a>
             </div>
             
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='shop.html';">
                 <img src="img/clothestest.jpg" alt="" width="200">
                 <div class="des">
                     <span>adidas</span>
@@ -114,7 +113,7 @@
                 </div>
                 <a href="#"><img  src="img/shopping-cart.png" class="cart" width="1"></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='shop.html';">
                 <img src="img/clothestest.jpg" alt="" width="200">
                 <div class="des">
                     <span>adidas</span>
@@ -130,7 +129,7 @@
                 </div>
                 <a href="#"><img  src="img/shopping-cart.png" class="cart" width="1"></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='shop.html';">
                 <img src="img/clothestest.jpg" alt="" width="200">
                 <div class="des">
                     <span>adidas</span>
