--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
+    <link rel="stylesheet" href="stylesignup.css">
 </head>
 <body>
+    <div class="login-warpper">
+        <div class="login-left">
+            <img src="img/backgroundtest.jpg" >
+            <div class="h1">Click to Sign Up</div>
+        </div>
+        
     
+
+        <div class="login-right">
+            <div class="h2">Register</div>
+            <div class="form-group">
+                <input type="text" id="full-name" placeholder="Full Name">
+                <label for="full-name">Full Name</label>
+            </div>
+            <div class="form-group">
+                <input type="text" id="email" placeholder="Email">
+                <label for="Email">Email</label>
+            </div>
+            <div class="form-group">
+                <input type="password" id="password" placeholder="Password">
+                <label for="Password">Password</label>
+            </div>
+
+            <div class="checkbox-container">
+                <input type="checkbox">
+                <div class="text-checkbox">
+                    I agree with this term of service
+                </div>
+            </div>
+            <div class="button-area">
+                <button class="btn btn-seccodary">Login</button>
+                <button class="btn btn-primary">Sign-Up</button>
+            </div>
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+    <script src="scriptsignup.js"></script>
 </body>
 </html>
