--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="button-area">
-                <button class="btn btn-seccodary">Login</button>
+                <button onclick="window.location.href='login.html';" class="btn btn-seccodary">Login</button>
                 <button class="btn btn-primary">Sign-Up</button>
             </div>
 
