--- a/sproduct.html
+++ b/sproduct.html
@@ -18,7 +18,7 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="shop.html">shop</a></li>
-                <li><a href="signin.html">Sign in</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a href="cart.html"><img id="bar"  src="img/shopping-cart.png"  width="20"></a></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
                 <img id="close" href="#" src="img/close.png"  width="10">
