--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
             <div class="h2">Register</div>
             <div class="form-group">
                 <input type="text" id="full-name" placeholder="Full Name">
-                <label for="full-name">Full Name</label>
+                <label for="full-name">Username</label>
             </div>
             <div class="form-group">
                 <input type="text" id="email" placeholder="Email">
