--- a/signup.html
+++ b/signup.html
@@ -32,14 +32,9 @@
                 <label for="Password">Password</label>
             </div>
 
-            <div class="checkbox-container">
-                <input type="checkbox">
-                <div class="text-checkbox">
-                    I agree with this term of service
-                </div>
-            </div>
+           
             <div class="button-area">
-                <button class="btn btn-seccodary">Login</button>
+                <button onclick="window.location.href='login.html';"class="btn btn-seccodary">Login</button>
                 <button class="btn btn-primary" id="main_btn">Sign-Up</button>
             </div>
 
@@ -109,12 +104,12 @@
             };
             const dbref = ref(db);
 
-            get(child(dbref, "UserLists/"+ name.value)).then((snapshot)=>{
+            get(child(dbref, "UserLists/"+ email.value)).then((snapshot)=>{
                 if(snapshot.exists()){
                     alert("Username already exists");
             }
             else {
-                set(ref(db, "UserLists/"+ name.value), {
+                set(ref(db, "UserLists/"+ email.value), {
                     name: name.value,
                     email: email.value,
                     pass: encPass()
