--- a/signup.html
+++ b/signup.html
@@ -38,8 +38,6 @@
                 <button class="btn btn-primary" id="main_btn">Sign-Up</button>
             </div>
 
-
-
         </div>
     </div>
 
@@ -104,12 +102,12 @@
             };
             const dbref = ref(db);
 
-            get(child(dbref, "UserLists/"+ email.value)).then((snapshot)=>{
+            get(child(dbref, "UserLists/"+ name.value)).then((snapshot)=>{
                 if(snapshot.exists()){
                     alert("Username already exists");
             }
             else {
-                set(ref(db, "UserLists/"+ email.value), {
+                set(ref(db, "UserLists/"+ name.value), {
                     name: name.value,
                     email: email.value,
                     pass: encPass()
