--- a/shop.html
+++ b/shop.html
@@ -337,7 +337,7 @@
 
         </div>
         <div class="col">
-            <h4>My Accout</h4>
+            <h4>My Account</h4>
             <a href="#">Sing In</a>
             <a href="#">View Cart</a>
             <a href="#">My Wishlist</a>
