--- a/cart.html
+++ b/cart.html
@@ -8,9 +8,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="style.css">
     
+
+
 </head>
 
+<!--  ---------------- header ---------------- -->
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js" integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.14.0/firebase-app.js" integrity="sha512-ewOP2Avv5hrFQDlXexYadiPL71H0SF5jWcGNJcDXEGhsIjDe9e5y6kjZBikuK3YIWkV8WBO9tr1JwtDG07tpkg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="cart_config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.8/dist/sweetalert2.all.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
+
+
     <section id = "header">
         <a href="#"><img src="img/piconetest.png" class="logo" alt=""></a><!--Logo website-->
         <div>
@@ -26,10 +39,14 @@
         <div id="mobile">
             <img id="bar" src="img/outdent.png"  width="20">
         </div>
-
     </section>
+
+
+
+<!--  ---------------- cart ---------------- -->
     <section id="cart" class="section-p1">
         <table width="100%">
+            <!-- table head -->
             <thead>
                 <tr>
                     <td>Remove</td>
@@ -40,6 +57,77 @@
                     <td>Subtotal</td>
                 </tr>
             </thead>
+
+
+            <!-- แบบเชื่อม js 
+            <div class="container">
+                <div class="row"> 
+                    <h2>Products</h2>
+                </div>
+                <div class="row" id ="row1">
+                </div>
+                <div class="row">
+                    <h3>Shopping cart</h3>
+                </div>
+                <div class="row" id ="row2">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Remove</th>
+                                <th scope="col">Image</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Price</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tableProducts">
+                    </table>    
+            </div>
+
+
+
+
+
+            <tbody id="cart-body">
+            <script>
+                function add(id) {
+                for(let index=0;index<products.length;index++) {
+                if(products[index].id != id || products[index].cart==true){
+
+                } else {
+                products[index].cart = true;
+                con2.push(products[index].id);
+                document.getElementById('tableProducts').innerHTML += `
+                <tr>
+                <th scope="row">${con+1}</th>
+                <td><button class="btn btn-danger" onclick="remove(${products[index].id})">Remove</button></td>
+                <td><img style="width: 5rem;" src="${products[index].img}"></td>
+                <td>${products[index].name}</td>
+                <td>
+                <button class="btn btn-primary" onclick="reduceAmount(${products[index].id})">-</button>
+                <input style="width: 2rem;" id="${products[index].id}" value="${products[index].quantity}" disabled>
+                <button class="btn btn-primary" onclick="addAmount(${products[index].id})">+</button>
+                </td>
+                </tr>
+                `;
+
+                con++;
+                products[index].total = products[index].price * products[index].quantity;
+        }
+    }
+    document.getElementById('total').innerHTML =`
+    <tr>
+
+    </tr>
+    `
+}
+            </script>
+            </tbody> -->
+            
+
+
+            <!-- แบบ hard code ที่ไอไอซ์ทำไว้ -->
             <tbody>
                 <tr>
                     <td><img  href="#" src="img/close.png" class="cancelitemcart" width="10"></td>
@@ -68,6 +156,10 @@
             </tbody>
         </table>
     </section>
+
+
+
+
     <section id="add-cart">
         <div id="coupon">
             <h3>Apply Coupon</h3>
@@ -94,9 +186,20 @@
             </table>
             <button class="normal">Proceed to Checkout</button>
         </div>
-
     </section>
 
+
+
+
+
+
+
+
+
+
+
+
+    <!--  ---------------- header ---------------- -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/" alt="">
