Revert "Merge branch 'main' of https://github.com/Krispzin/wearlt-website"
This reverts commit 760eec0e4c3e288339c0d27c348196889d2696d3, reversing
changes made to 241a67354f83b24b12017cca299f7d7b2cf6f0e9.

--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,8 @@
                 <button class="btn btn-primary" id="main_btn">Sign-Up</button>
             </div>
 
+
+
         </div>
     </div>
 
@@ -102,12 +104,12 @@
             };
             const dbref = ref(db);
 
-            get(child(dbref, "UserLists/"+ name.value)).then((snapshot)=>{
+            get(child(dbref, "UserLists/"+ email.value)).then((snapshot)=>{
                 if(snapshot.exists()){
                     alert("Username already exists");
             }
             else {
-                set(ref(db, "UserLists/"+ name.value), {
+                set(ref(db, "UserLists/"+ email.value), {
                     name: name.value,
                     email: email.value,
                     pass: encPass()
