--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="signup.html">Sign up</a></li>
                 <li><a href="login.html">Login</a></li>
                 <li><a><a class="active" ><img id="cartbar"  src="img/shopping-cart.png"  width="20"></a></li>
                 <img id="close" href="#" src="img/close.png"  width="10">
