--- a/html/cart.html
+++ b/html/cart.html
@@ -25,7 +25,7 @@
 
 
     <section id = "header">
-        <a href="#"><img src="/img/piconetest.jpg" class="logo" alt=""></a><!--Logo website-->
+        <a href="#"><img src="/img/" class="logo" alt=""></a><!--Logo website-->
         <div>
             <ul id="navbar">
                 <li><a href="/html/index.html">Home</a></li>
@@ -33,7 +33,7 @@
                 <li><a href="/html/signup.html" id="signuplink">Sign Up</a></li>
                 <li><a href="/html/login.html" id="loginlink">Login</a></li>
                 <li><a><a class="active" ><img id="cartbar"  src="/img/shopping-cart.png"  width="20"></a></li>
-                <img id="close" href="#" src="/img/close.png  width="10">
+                <img id="close" href="#" src="/img/close.png" width="10">
             </ul>
         </div>
         <div id="mobile">
