--- a/html/index.html
+++ b/html/index.html
@@ -421,6 +421,7 @@
     
     
     <script src="/css/style.css"></script>
+    <script src="/js/script1.js"></script>
     <script>
 
 //--------------------------------ตัวแปล--------------------------------//
