--- a/html/product-details.html
+++ b/html/product-details.html
@@ -78,7 +78,7 @@
                 <div id="bigimgDiv">
                     <img id="bigimg" src="/img/clothestest.jpg" width="200">
                 </div>
-                <div id="smlimgDiv">
+                <div id="smlimgsDiv">
                     <img class="smimgs" src="/img/clothestest2.jpg">
                     <img class="smimgs" src="/img/clothestest4.jpg">
 
