--- a/html/detailshop.html
+++ b/html/detailshop.html
@@ -17,7 +17,7 @@
         <div>
             <ul id="navbar">
                 <li><a href="/html/index.html">Home</a></li>
-                <li><a class="active" href="/html/shop.html">shop</a></li>
+                <li><a class="active" href="/html/shop.html">Shop</a></li>
                 <li><a href="/html/signup.html">Sign Up</a></li>
                 <li><a href="/html/login.html">Login</a></li>
                 <li><a href="/html/cart.html"><img id="bar"  src="/img/shopping-cart.png"  width="20"></a></li><!--cart ยังทำไม่ได้ไม่รู้เป็นไรเดี่ยวมาทำ-->
