--- a/html/admin.html
+++ b/html/admin.html
@@ -69,19 +69,17 @@
     <!-- admin panel -->
     <label> Product Name </label> <input type="text" id="nameinp"> <br><br>
     <label> Product Price</label> <input type="number" id="priceinp"><br><br>
-    <!-- <
     <label> Category</label>
     <select id="catinp">
         <option value="shirt">shirt</option>
         <option value="t-shirt">t-shirt</option>
         <option value="pants">pants</option>
         <option value="hoodie">hoodie</option>
-        <!-- <option value="ass">ass</option> -->
     </select><br><br>
-    <label>Points #1</label> <input type="text" id="p1inp" class="pointers"><br><br>
+    <!-- <label>Points #1</label> <input type="text" id="p1inp" class="pointers"><br><br>
     <label>Points #2</label> <input type="text" id="p2inp" class="pointers"><br><br>
     <label>Points #3</label> <input type="text" id="p3inp" class="pointers"><br><br>
-    <label>Points #4</label> <input type="text" id="p4inp" class="pointers"><br><br>
+    <label>Points #4</label> <input type="text" id="p4inp" class="pointers"><br><br> -->
 
     <label id="pdlab">Product Description</label> <textarea id="desarea"></textarea><br><br>
 
@@ -188,14 +186,15 @@
             return ImageLinksArray.length == Files.length;
         }
 
-        function GetPoints(){
-            let points = [];
-            if(p1.value.length>0) points.push(p1.value);
-            if(p2.value.length>0) points.push(p2.value);
-            if(p3.value.length>0) points.push(p3.value);
-            if(p4.value.length>0) points.push(p4.value);
-            return points;
-        }
+        // function GetPoints(){
+        //     let points = [];
+        //     if(p1.value.length>0) points.push(p1.value);
+        //     if(p2.value.length>0) points.push(p2.value);
+        //     if(p3.value.length>0) points.push(p3.value);
+        //     if(p4.value.length>0) points.push(p4.value);
+        //     return points;
+        // }
+
         function RestoreBack(){
             selBtn.disabled =false;
             addBtn.disabled =false;
@@ -259,14 +258,13 @@
         
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBQs_XdZ1BAvfXQB5TwfMPXpATtmvPRC3w",
-            authDomain: "wearit-3bf48.firebaseapp.com",
-            databaseURL: "https://wearit-3bf48-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "wearit-3bf48",
-            storageBucket: "wearit-3bf48.appspot.com",
-            messagingSenderId: "1048159161434",
-            appId: "1:1048159161434:web:d4cb925dd700e078b5dc63",
-            measurementId: "G-KGSRWKZNDV"
+            apiKey: "AIzaSyBrMehVkwzcv_U4aXpnCclwmSWWTJ-ucNU",
+            authDomain: "wearitagain-c0f31.firebaseapp.com",
+            databaseURL: "https://wearitagain-c0f31-default-rtdb.asia-southeast1.firebasedatabase.app/",
+            projectId: "wearitagain-c0f31",
+            storageBucket: "wearitagain-c0f31.appspot.com",
+            messagingSenderId: "526909210632",
+            appId: "1:526909210632:web:318aad8a559803f46a11bd"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -289,8 +287,8 @@
                 Category: category.value,
                 Description: description.value,
                 Price: price.value,
-                Stock: stock.value,
-                Point:GetPoints(),
+                // Stock: stock.value,
+                // Point:GetPoints(),
                 LinksOfImages: ImageLinksArray
             });
             alert("product uploaded");
