--- a/html/login.html
+++ b/html/login.html
@@ -49,14 +49,13 @@
         import { getDatabase, ref, set, child, get } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBQs_XdZ1BAvfXQB5TwfMPXpATtmvPRC3w",
-            authDomain: "wearit-3bf48.firebaseapp.com",
-            databaseURL: "https://wearit-3bf48-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "wearit-3bf48",
-            storageBucket: "wearit-3bf48.appspot.com",
-            messagingSenderId: "1048159161434",
-            appId: "1:1048159161434:web:d4cb925dd700e078b5dc63",
-            measurementId: "G-KGSRWKZNDV"
+            apiKey: "AIzaSyBrMehVkwzcv_U4aXpnCclwmSWWTJ-ucNU",
+            authDomain: "wearitagain-c0f31.firebaseapp.com",
+            databaseURL: "https://wearitagain-c0f31-default-rtdb.asia-southeast1.firebasedatabase.app/",
+            projectId: "wearitagain-c0f31",
+            storageBucket: "wearitagain-c0f31.appspot.com",
+            messagingSenderId: "526909210632",
+            appId: "1:526909210632:web:318aad8a559803f46a11bd"
         };
       
         const app = initializeApp(firebaseConfig);
