--- a/html/product-details.html
+++ b/html/product-details.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title id="titletop"></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
-
         #contentsDiv {
             display: flex;
             justify-content: center;
@@ -22,12 +22,22 @@
         }
 
         #bigimg {
-            
+
             width: 550px;
             min-height: 300px;
             max-width: 400px;
 
         }
+
+        #smlimgsDiv {
+            display: flex;
+            width: 550px;
+            margin-top: 10px;
+            flex-wrap: wrap;
+            margin-left: 6px;
+        }
+
+
 
         .smimgs {
             height: 80px;
@@ -78,7 +88,7 @@
                 <div id="bigimgDiv">
                     <img id="bigimg" src="/img/clothestest.jpg" width="200">
                 </div>
-                <div id="smlimgsDiv">
+                <div id="smlimgDiv">
                     <img class="smimgs" src="/img/clothestest2.jpg">
                     <img class="smimgs" src="/img/clothestest4.jpg">
 
@@ -87,14 +97,14 @@
             <div id="detailsDiv">
                 <h4 id="title">dadadsadasd</h4>
                 <ul id="points">
+                    <!-- <li>dsadasdasdadwd</li>
                     <li>dsadasdasdadwd</li>
                     <li>dsadasdasdadwd</li>
-                    <li>dsadasdasdadwd</li>
-                    <li>dsadasdasdadwd</li>
+                    <li>dsadasdasdadwd</li> -->
 
                 </ul>
                 <p id="description">
-                    dsadwadsawdsawdsawd
+                    <!-- dsadwadsawdsawdsawd -->
                 </p>
                 <h3 id="price">111</h3>
                 <div id="btnDiv">
@@ -106,6 +116,59 @@
         </div>
     </div>
 
+    <script>
+
+        let product = null;
+
+        window.onload = function () {
+            product = localStorage.Product;
+            if (product) {
+                product = JSON.parse(product);
+                LoadProduct();
+            }
+        }
+
+        function LoadProduct() {
+            document.getElementById("titleLi").innerHTML = product.ProductTitle;
+            document.getElementById("titletop").innerHTML = product.ProductTitle;
+            document.getElementById("catlink").innerHTML = product.Category;
+            document.getElementById("bigimg").src = product.LinksOfImages[0];
+            document.getElementById("title").innerHTML = product.ProductTitle;
+            document.getElementById("description").innerHTML = product.Description;
+            document.getElementById("price").innerHTML = product.Price + "Thai baht";
+            GenLi();
+            GenImgs();
+        }
+
+        function GenLi() {
+            product.Points.forEach(html => {
+                if (html.lenght > 1) {
+                    var li = document.createElement('li');
+                    li.innerHTML = html;
+                    document.getElementById('points').append(li);
+                }
+            });
+        }
+
+        function GenImgs() {
+            let i = 1;
+            let html = '';
+            product.LinksOfImages.forEach(imglink => {
+                let img = document.createElement('img');
+                img.src = imglink;
+                img.classList.add("smimgs", "mr-2", "mb-2");
+                img.id = 'im' + (i++);
+                img.addEventListener('click', ChangeBigImg);
+                document.getElementById('smlimgsDiv').append(img);
+            });
+        }
+
+        function ChangeBigImg(event) {
+            let elem = document.getElementById(event.target.id);
+            document.getElementById('bigimg').src = elem.src;
+        }
+
+    </script>
 </body>
 
 </html>
