--- a/html/signup.html
+++ b/html/signup.html
@@ -49,13 +49,13 @@
         import { getDatabase, ref, set, child, get } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBrMehVkwzcv_U4aXpnCclwmSWWTJ-ucNU",
-            authDomain: "wearitagain-c0f31.firebaseapp.com",
-            databaseURL: "https://wearitagain-c0f31-default-rtdb.asia-southeast1.firebasedatabase.app/",
-            projectId: "wearitagain-c0f31",
-            storageBucket: "wearitagain-c0f31.appspot.com",
-            messagingSenderId: "526909210632",
-            appId: "1:526909210632:web:318aad8a559803f46a11bd"
+            apiKey: "AIzaSyBChr-7kEA30C5KceoYF0bA2LMCoHzWXzE",
+            authDomain: "wearit-f97b1.firebaseapp.com",
+            databaseURL: "https://wearit-f97b1-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "wearit-f97b1",
+            storageBucket: "wearit-f97b1.appspot.com",
+            messagingSenderId: "225288076004",
+            appId: "1:225288076004:web:755e446f713c543fd14af1"
         };
       
         const app = initializeApp(firebaseConfig);
