--- a/html/sproduct.html
+++ b/html/sproduct.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id = "header">
-        <a href="#"><img src="img/" class="logo" alt=""></a><!--Logo website-->
+        <!-- <a href="#"><img src="img/" class="logo" alt=""></a>Logo website -->
         <div>
             <ul id="navbar">
                 <li><a href="/html/index.html">Home</a></li>
@@ -51,8 +51,8 @@
                 <option>Small</option>
                 <option>Large</option>
             </select>
-            <input type="number" value="1">
-            <button  class="normal">Add To Cart</button>
+            <input type="number" placeholder="1" id="itemNum">
+            <button  class="normal" id="AddCartbtn">Add To Cart</button>
             <h4>Product Details</h4>
             <span id="description">
             </span>
@@ -140,7 +140,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="img/" alt="">
+            <!-- <img class="logo" src="img/" alt=""> -->
             <h4>Contact</h4>
             <p><strong>Address: </strong>Bangkok Thailand</p>
             <p><strong>Phone: </strong>021111111 / 0311112222</p>
@@ -186,7 +186,66 @@
 
 
     </footer>
-    <script>
+    <script type="module">
+
+//--------------------------------IMPORT + CONFIGURATION-------------------------------//
+
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyBChr-7kEA30C5KceoYF0bA2LMCoHzWXzE",
+            authDomain: "wearit-f97b1.firebaseapp.com",
+            databaseURL: "https://wearit-f97b1-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "wearit-f97b1",
+            storageBucket: "wearit-f97b1.appspot.com",
+            messagingSenderId: "225288076004",
+            appId: "1:225288076004:web:755e446f713c543fd14af1"
+        };
+
+        const app = initializeApp(firebaseConfig);
+
+// --------------------import database functions---------------------//
+
+
+        import { getDatabase, ref, set, child, get }
+            from "https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js";
+        const realdb = getDatabase();
+
+//---------------------------Cart Function---------------------------------//
+
+        // const cartbtn = document.getElementById("AddCartbtn");
+        // const itemnum = document.getElementById("itemNum");
+
+        // function FindSumPrice() {
+        //     var sum = 0;
+        //     var price = document.getElementById("price");
+        //     for (var i = 0; i < price.value; i++) {
+        //         sum += parse(price[i].innerHTML);
+        //     }
+        //     return sum;
+        // }
+
+        // function addCart() {
+        //     const cartref = ref(realdb);
+
+        //     get(child(cartref, 'CartOrder/'+ )).then((snapshot) => {
+        //         if (snapshot.exists()) {
+        //             console.log(snapshot.val());
+        //             itemnum.innerHTML = snapshot.val();
+        //         } else {
+        //             set(ref(realdb, 'CartOrder/'),{
+        //                 Item: product.ProductTitle,
+        //                 Quantity: itemnum.value,
+        //                 Price: product.ProductPrice
+        //             });
+        //         }
+        //     }).catch((error) => {
+        //         console.error(error);
+        //     });
+        // }
+
+//-----------------------------FUNCTIONS---------------------------------//
 
         let product = null;
 
