--- a/html/admin.html
+++ b/html/admin.html
@@ -177,6 +177,16 @@
             return namey.replace(/[^a-zA-Z0-9]/g,"");
         }
 
+        function makeid(length) {
+            var result           = '';
+            var characters       = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            var charactersLength = characters.length;
+            for ( var i = 0; i < length; i++ ) {
+                result += characters.charAt(Math.floor(Math.random() * charactersLength));
+            }
+            return result;
+        }
+
         function GetImgUploadProgress(){
             return 'Images Uploaded ' + ImageLinksArray.length + ' of ' + Files.length;
         }
@@ -284,6 +294,7 @@
         
         function UploadAProduct(){
             set(ref(realdb,"theProductRealdb/"+ getShortTitle()),{
+                id: makeid(8),
                 ProductTitle: name.value,
                 Category: category.value,
                 Description: description.value,
