--- a/html/admin.html
+++ b/html/admin.html
@@ -110,10 +110,10 @@
         const price = document.getElementById('priceinp');
         // const stock = document.getElementById('stockinp');
 
-        const p1 = document.getElementById('p1inp');
-        const p2 = document.getElementById('p2inp');
-        const p3 = document.getElementById('p3inp');
-        const p4 = document.getElementById('p4inp');
+        // const p1 = document.getElementById('p1inp');
+        // const p2 = document.getElementById('p2inp');
+        // const p3 = document.getElementById('p3inp');
+        // const p4 = document.getElementById('p4inp');
 
         function OpenFileDialog(){
             let inp = document.createElement('input');
