--- a/html/index.html
+++ b/html/index.html
@@ -458,6 +458,117 @@
             }
         }
 
+//--------------------------------IMPORT + CONFIGURATION-------------------------------//
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+
+
+const firebaseConfig = {
+    apiKey: "AIzaSyBChr-7kEA30C5KceoYF0bA2LMCoHzWXzE",
+    authDomain: "wearit-f97b1.firebaseapp.com",
+    databaseURL: "https://wearit-f97b1-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "wearit-f97b1",
+    storageBucket: "wearit-f97b1.appspot.com",
+    messagingSenderId: "225288076004",
+    appId: "1:225288076004:web:755e446f713c543fd14af1"
+};
+
+const app = initializeApp(firebaseConfig);
+
+// --------------------import database functions---------------------//
+
+
+        import { getDatabase, ref, set, child, get }
+            from "https://www.gstatic.com/firebasejs/9.14.0/firebase-database.js";
+        const realdb = getDatabase();
+
+        var OuterDiv = document.getElementById('productsDiv');
+        var ArrayOfProducts = [];
+        window.addEventListener('load', GetAllProducts);
+
+        function GetAllProducts() {
+            const dbref = ref(realdb);
+
+            get(child(dbref, "theProductRealdb"))
+                .then((snapshot) => {
+                    snapshot.forEach(prod => {
+                        ArrayOfProducts.push(prod.val());
+                    });
+                    AddAllProducts();
+                })
+        }
+
+        function AddAllProducts() {
+            let i = 0;
+            ArrayOfProducts.forEach(prod => {
+                AddAProduct(prod, i++);
+            });
+            AssignAllEvent();
+        }
+
+        function AddAProduct(product, index) {
+            let html =
+            `
+                <img class="image" id="image-`+ index +`" src="`+ product.LinksOfImages[0]+ `" alt="" width="">
+                <div class="des" id="des-`+ index +`">
+                    <span class="cat" id="cat-`+ index +`">`+ product.Category +`</span>
+                    <h5 class="ti" id="ti-`+ index +`">`+ product.ProductTitle +`</h5>
+                    <h4 class="price" id="price-`+ index +`">`+ product.Price +` ฿</h4>
+                </div>
+                <img src="/img/shopping-cart.png" class="cart" id="cart-`+ index +`" width="1">
+            `
+            
+
+            let newProd = document.createElement('div');
+            newProd.classList.add('pro');
+            newProd.id = "pro-" + index;
+            newProd.innerHTML = html;
+            OuterDiv.append(newProd);
+        }
+
+
+        function getShortTitle(title) {
+            if (title.length > 49) title = title.substring(0, 47);
+            else return title;
+            return title + "...";
+        }
+
+        function GetProductIndex(id) {
+            var indstart = id.indexOf('-') + 1;
+            var indend = id.length;
+            return id.substring(indstart, indend);
+        }
+
+        function GotoProductDetails(event) {
+            var inx = GetProductIndex(event.target.id);
+            localStorage.setItem('Product', JSON.stringify(ArrayOfProducts[inx]));
+            // console.log(localStorage.getItem('Product'));
+            window.location = 'sproduct.html';
+        }
+
+        function AssignAllEvent() {
+            var probtns = document.getElementsByClassName('pro');
+            var imgbtns = document.getElementsByClassName('image');
+            var desbtns = document.getElementsByClassName('des');
+            var catbtns = document.getElementsByClassName('cat');
+            var tibtns = document.getElementsByClassName('ti');
+            var pribtns = document.getElementsByClassName('price');
+            var cartbtns = document.getElementsByClassName('cart');
+
+
+
+            for (let i = 0; i < probtns.length; i++) {
+                probtns[i].addEventListener('click', GotoProductDetails);
+                imgbtns[i].addEventListener('click', GotoProductDetails);
+                desbtns[i].addEventListener('click', GotoProductDetails);
+                catbtns[i].addEventListener('click', GotoProductDetails);
+                tibtns[i].addEventListener('click', GotoProductDetails);
+                pribtns[i].addEventListener('click', GotoProductDetails);
+                cartbtns[i].addEventListener('click', GotoProductDetails);
+                
+            }
+        }
+
     </script>
 </body>
 
