--- a/html/shop.html
+++ b/html/shop.html
@@ -48,12 +48,12 @@
 
     
     </section>
-    <section id="paginaction" class="section-p1"> 
+    <!-- <section id="paginaction" class="section-p1"> 
         <a href ="shop.html">1</a>
         <a href ="shop2.html">2</a>
         
 
-    </section>
+    </section> -->
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/" alt="">
