--- a/html/shop.html
+++ b/html/shop.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id = "header">
-        <a href="#"><img src="/img/.jpg" class="logo" alt=""></a><!--Logo website-->
+        <a href="#"><img src="/img/draft1.png" width="40" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
         <div>
             <ul id="navbar">
                 <li><a href="/html/index.html">Home</a></li>
