--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 <body>
     <script src="/css/style.css"></script>
     <section id = "header">
-        <a href="#"><img src="/img/.jpg" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
+        <a href="#"><img src="/img/draft1.png" width="40" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
         <div>
             <ul id="navbar">
                 <li><a class = "active" href="/html/index.html">Home</a></li>
@@ -189,8 +189,7 @@
 
     </section>
     <section id = "product1" class="section-p1">
-        <h2>New Collection</h2>
-        <p>Summer Collection New Morden Design</p>
+        
         <div class="pro-container" id="productsDiv2">
             <!-- <div class="pro" onclick="window.location.href='/html/sproduct.html';">
                 <img src="/img/clothestest.jpg" alt="" width="">
