--- a/html/sproduct.html
+++ b/html/sproduct.html
@@ -13,7 +13,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="" class="logo" alt=""></a>
+        <a href="#"><img src="/img/draft1.png" width="40" class="logo" alt=""></a><!--Logo website ปล่อยไปก่อน-->
         <div>
             <ul id="navbar">
                 <li><a href="/html/index.html">Home</a></li>
